hphp/test/zend/good/ext/openssl/tests/bug25614.php.skipif
<?php 
if (!extension_loaded("openssl")) die("skip"); 
if (!@openssl_pkey_new()) die("skip cannot create private key"); 
?>