hphp/test/zend/bad/ext/phar/tests/phpinfo_003.php.skipif
<?php
if (!extension_loaded("phar")) die("skip");
if (extension_loaded("zlib")) die("skip zlib loaded");
if (extension_loaded("bz2")) die("skip bz2 loaded");
$arr = Phar::getSupportedSignatures();
if (in_array("OpenSSL", $arr)) die("skip openssl support enabled");
?>